I have no idea what I am doing.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,13 @@
     <color name="colorCopyButton">#00897B</color>
     <color name="colorMLKitCard">#FFCCBC</color>
     <color name="colorZxingCard">#BBDEFB</color>
+    <color name="OrientationToggleButton">#1E3A8A</color>
+    <color name="flash_button_background_color">#80000000</color>
 
     <color name="barcode_reticle_background">#99000000</color>
     <color name="barcode_reticle_stroke">#ffffff</color>
+
+    <!-- ADD THIS LINE -->
+    <color name="app_background_grey">#F5F5F5</color> <!-- A light material grey, you can change this hex value -->
+
 </resources>
